--- a/styles/architects.css
+++ b/styles/architects.css
@@ -32,6 +32,11 @@ font-weight: semi-bold;
 border-radius: 8px;
 border: 0;
 }
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
 /* header styles */
 /* navbar related styles */
 
@@ -90,7 +95,33 @@ border: 0;
     
 
 }
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
 
+#quick-list{
+    font-weight: 500;
+}
+/* team and feature related styles */
+.teams{
+    align-items: center;
+}
+
+
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+}
+main>section{
+    margin-top: 130px;
+}
+
+.our-feature{
+    margin-left: 130px;
+   max-width: 530px;
+}
 /* responsive media query */
 
 @media screen and (max-width: 576px){
